# Hephaestus

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CryptoTax.ipynb  CryptoTaxRedo.ipynb  EFFICIENT_ATTENTION_INTEGRATION.md  EnergyPredColab.ipynb  EnergyPrediction2.ipynb  EnergyPredictionSeperate.ipynb  FEATURE_INTERACTIONS_README.md  HouseEnergy.ipynb  MTMAirQuality.html  MTMAirQuality.ipynb  MTMAirQualityLigtning.ipynb  MaskedTabularModeling.ipynb  Plannets.html  Plannets.ipynb  PlannetsPT.ipynb  Project.toml  README.md  SRDiamonds.ipynb  Scratch.ipynb  TWO_STAGE_TRAINING.md  Temp.ipynb  Turbine.ipynb  Wells.ipynb  anomaly_detection.py  anomaly_encoder_decoder.html  anomaly_encoder_decoder.py  anomaly_encoder_decoder_two_stage.py  anomaly_performance_analysis.md  banking_fraud.py  big_synthetic_generator.py  crypto_try.py  data_join.py  debug_pretraining.py  debug_tensor_shapes.py  enefit.py  environment-gpu.yml  environment-mac.yml  (+49 more)
Transformers/: BERT.ipynb  Diamonds.ipynb  EDA.ipynb  Encoder.ipynb  FineTune.ipynb  HepheastusWeather.ipynb  JustBERT.ipynb  MTMAirQuality.ipynb  MaskedTabularModeling.ipynb  MaskedTabularModelingFlax.ipynb  NumericOperations.ipynb  SimpleTransformer.ipynb  TabTransformer.ipynb  Temp.ipynb  VanilliaTransformers.ipynb  heapheastus.py  hephaestus.py  hephaestus_jax.py  hephaestus_jax_copy.py  inference_transformers.ipynb  nalu.ipynb  scratch.ipynb  simple_diamonds.ipynb  test.ipynb  testing-tqdm.ipynb  tmp.py  transformer_tabular.ipynb  transformer_tabular_vanilia.ipynb
Transformers/depricated/: ArtificialData.ipynb  BERT.ipynb  DiamondsTesting.ipynb  Download.ipynb  TabTransformer.ipynb  inference_transformers.ipynb  simple_diamonds.ipynb  transformer_tabular.ipynb
depricated/: Diamonds.ipynb  EDA.ipynb  HepheastusWeather.ipynb  hearts.ipynb  scratch.py
depricated/hephaestus_julia/: plotting_results.jl  test_encoder.jl  tmp.jl  transformerlite.jl
hephaestus/: __init__.py  inference_utils.py  planets.py
hephaestus/analysis/: __init__.py  analysis.py  analysis_torch.py  plots.py
hephaestus/model/: hephaestus.py
hephaestus/models/: Debug.ipynb  __init__.py  dataset_wrapper.py  decoder_patch.py  encoder_decoder.py  model_data_classes.py  models.py  multihead_attention.py  simple_time_series.py  simple_time_series_pt.py  simple_time_series_pt_claude.py  time_series.py  time_series_decoder.py  time_series_decoder_training.py  time_series_encoder.py
hephaestus/single_row_models/: __init__.py  categorical_enhancements.py  enhanced_models.py  feature_interactions.py  model_data_classes.py  moe_components.py  neural_feature_engineering.py  plotting_utils.py  single_row_models.py  single_row_utils.py  training.py
hephaestus/timeseries_models/: models.py  (+9 more)
hephaestus_julia/: transformer.jl  transformerlite.jl
metrics_flash/: train_metrics.csv  validation_metrics.csv
outputs/: nfe_model_comparison.csv  quick_comparison.csv
result_images/: model_performance_bars.html  model_performance_comparison.html  performance_improvement.html
scratch/: o_of_n.jl  plotting_results.jl
utils/: mtm_training.py  training.py
(+34 files in other folders)
