[project]
name = "hephaestus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.2",
    "icecream>=2.1.3",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pre-commit>=4.0.1",
    "pyarrow>=18.1.0",
    "ruff>=0.8.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbconvert>=7.16.6",
]

[project.optional-dependencies]
cuda = ["jax[cuda]>=0.4.1"]
cpu = ["jax>=0.4.1"]
m = ["jax-metal>=0.1.1"]
packages = ["hephaestus"]   # Only include the main package
