[project]
name = "hephaestus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "icecream>=2.1.3",
    "ipywidgets>=8.1.5",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "polars>=1.24.0",
    "pre-commit>=4.0.1",
    "pyarrow>=18.1.0",
    "ruff>=0.8.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.2.2",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.6.0",
    "torchvision>=0.20.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "jupyter-cache>=1.0.1",
    "nbformat>=5.10.4",
    "pytest>=8.3.4",
]


[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbconvert>=7.16.6",
    "pre-commit>=4.0.1",
    "standard-imghdr>=3.13.0", # python 1.13 fix for tensorboard
    "xgboost>=2.1.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
